--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "clsx": "^2.1.1",
     "firebase": "^11.9.1",
     "framer-motion": "^12.16.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
