--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "dotenv": "^17.2.0",
     "firebase": "^11.9.1",
     "framer-motion": "^12.16.0",
     "lodash": "^4.17.21",
