--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cmdk": "^1.1.1",
     "dotenv": "^17.2.0",
     "firebase": "^11.9.1",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^12.16.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
@@ -41,6 +42,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
+    "react-input-mask": "^2.0.4",
     "resend": "^4.6.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
@@ -52,6 +54,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-input-mask": "^3.0.6",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.3",
     "typescript": "^5"
